@@ -1,3 +1,4 @@
  * Fix search in OTP #780
  * Fix empty OTP field after selection #781
  * Fix same save shared info #783
+ * Fix switch back to previous keyboard #782
