@@ -1,7 +1,8 @@
 KeePassDX(2.9.2)
  * Fix search in OTP #780
  * Fix empty OTP field after selection #781
-  * Fix same save shared info #783
+ * Fix same save shared info #783
+ * Fix switch back to previous keyboard #782
 
 KeePassDX(2.9.1)
  * Copy password from generator #697
